syntax = "proto3";

service InventoryService {
  rpc CheckInventory(CheckInventoryRequest) returns (CheckInventoryResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
}

message CheckInventoryRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckInventoryResponse {
  bool available = 1;
}

message UpdateInventoryRequest {
  string product_id = 1;
  int32 quantity = 2; // Positive for increase, negative for decrease
}

message UpdateInventoryResponse {
  bool success = 1;
  int32 updated_quantity = 2;
}
